fixing a bunch of issues in the express version

--- a/express/5-complete/public/css/imagegallery.css
+++ b/express/5-complete/public/css/imagegallery.css
@@ -130,7 +130,7 @@ a{
   float: right
   width: 300px;
   height: 200px;
-  background-image: url('/images/Select%20Image.png');
+  background-image: url('/img/Select%20Image.png');
   background-repeat: no-repeat;
   background-position: 100px 0px;
 }
